--- a/index.html
+++ b/index.html
@@ -78,55 +78,55 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Purchase</td>
+                        <td><label for="Purchase">Purchase</label></td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Very Unsatisfied"
+                            <input type="radio" name="Purchase" id="Purchase" value="Very Unsatisfied"
                                 aria-label="...">
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Unsatisfied" aria-label="...">
+                            <input type="radio" name="Purchase" id="Purchase" value="Unsatisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Neutral" aria-label="...">
+                            <input type="radio" name="Purchase" id="Purchase" value="Neutral" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Satisfied" aria-label="...">
+                            <input type="radio" name="Purchase" id="Purchase" value="Satisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Very Satisfied" aria-label="...">
+                            <input type="radio" name="Purchase" id="Purchase" value="Very Satisfied" aria-label="...">
 
                         </td>
                     </tr>
                     <tr>
-                        <td>Service</td>
+                        <td><label for="Service">Service</label></td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Very Unsatisfied"
+                            <input type="radio" name="Service" id="Service" value="Very Unsatisfied"
                                 aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Satisfied" aria-label="...">
+                            <input type="radio" name="Service" id="Service" value="Satisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Neutral" aria-label="...">
+                            <input type="radio" name="Service" id="Service" value="Neutral" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Satisfied" aria-label="...">
+                            <input type="radio" name="Service" id="Service" value="Satisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Very Satisfied" aria-label="...">
+                            <input type="radio" name="Service" id="Service" value="Very Satisfied" aria-label="...">
 
                         </td>
 
                     </tr>
                     <tr>
-                        <td>Company Overall</td>
+                        <td><label for="Company Overall">Company Overall</label></td>
                         <td class="rad-but">
                             <input type="radio" name="blankRadio" id="Company Overall" value="Very Unsatisfied"
                                 aria-label="...">
@@ -171,76 +171,76 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Buy from us again</td>
+                        <td><label for="Buy_from_us_again">Buy from us again</label></td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Very Unsatisfied"
+                            <input type="radio" name="Buy_from_us_again" id="Buy_from_us_again" value="Very Unsatisfied"
                                 aria-label="...">
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Unsatisfied" aria-label="...">
+                            <input type="radio" name="Buy_from_us_again" id="Buy_from_us_again" value="Unsatisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Neutral" aria-label="...">
+                            <input type="radio" name="Buy_from_us_again" id="Buy_from_us_again" value="Neutral" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Satisfied" aria-label="...">
+                            <input type="radio" name="Buy_from_us_again" id="Buy_from_us_again" value="Satisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Purchase" value="Very Satisfied" aria-label="...">
+                            <input type="radio" name="Buy_from_us_again" id="Buy_from_us_again" value="Very Satisfied" aria-label="...">
 
                         </td>
                     </tr>
                     <tr>
-                        <td>Recommend our product to others</td>
+                        <td><label for="Recommend_our_product_to_others">Recommend our product to others</label></td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Very Unsatisfied"
+                            <input type="radio" name="Recommend_our_product_to_others" id="Recommend_our_product_to_others" value="Very Unsatisfied"
                                 aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Satisfied" aria-label="...">
+                            <input type="radio" name="Recommend_our_product_to_others" id="Recommend_our_product_to_others" value="Satisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Neutral" aria-label="...">
+                            <input type="radio" name="Recommend_our_product_to_others" id="Recommend_our_product_to_others" value="Neutral" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Satisfied" aria-label="...">
+                            <input type="radio" name="Recommend_our_product_to_others" id="Recommend_our_product_to_others" value="Satisfied" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Service" value="Very Satisfied" aria-label="...">
+                            <input type="radio" name="Recommend_our_product_to_others" id="Recommend_our_product_to_others" value="Very Satisfied" aria-label="...">
 
                         </td>
 
                     </tr>
                     <tr>
-                        <td>Recommend our company to others</td>
+                        <td><label for="Recommend_our_company_to_others">Recommend our company to others</label></td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Company Overall" value="Very Unsatisfied"
+                            <input type="radio" name="Recommend_our_company_to_others" id="Company Overall" value="Very Unsatisfied"
                                 aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Company Overall" value="Unsatisfied"
+                            <input type="radio" name="Recommend_our_company_to_others" id="Recommend_our_company_to_others" value="Unsatisfied"
                                 aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Company Overall" value="Neutral" aria-label="...">
+                            <input type="radio" name="Recommend_our_company_to_others" id="Recommend_our_company_to_others" value="Neutral" aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Company Overall" value="Satisfied"
+                            <input type="radio" name="Recommend_our_company_to_others" id="Recommend_our_company_to_others" value="Satisfied"
                                 aria-label="...">
 
                         </td>
                         <td class="rad-but">
-                            <input type="radio" name="blankRadio" id="Company Overall" value="Very Satisfied"
+                            <input type="radio" name="Recommend_our_company_to_others" id="Recommend_our_company_to_others" value="Very Satisfied"
                                 aria-label="...">
 
                         </td>
